Port over portal configuration article